--- a/front-end/aula10 Grid-Layout/01-grid.css
+++ b/front-end/aula10 Grid-Layout/01-grid.css
@@ -5,9 +5,11 @@
     border: 10px solid cyan;
     
     display: grid;
-    grid-template-rows: 100px 100px 100px 100px 100px 100px;
-    grid-template-columns: 100px 100px 100px 100px 100px 100px;
+    grid-template-rows: repeat(6, 100px);
+    grid-template-columns: 0.5fr 3fr minmax(100px, 1fr);
+    gap: 1em 0.3em;
 
+    grid-auto-rows: 100px;
 }
 
 .item{
@@ -19,29 +21,6 @@
 
 }
 
-.item-1 {
-
-    /* grid-row-start: 1;
-    grid-row-end: 3;
-    grid-column-start: 1;
-    grid-column-end: 3; */
-
-    grid-row: 1/3;
-    grid-column: 1/3 ;
-
-}
-
-.item-2{
-
-    grid-row: 1/3 ;
-    grid-column:  4/6 ;
-
-}
-
-.item-3{
-    grid-area: 3/1/7/7 ;
-    
-}
 
 
 
