--- a/front-end/aula11 Grid-Layout-pt2/grid-autofit.css
+++ b/front-end/aula11 Grid-Layout-pt2/grid-autofit.css
@@ -6,8 +6,8 @@
     height: 600px;
 
     display: grid;
-    grid-template-rows: repeat(4, 100px);
-    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr   ));
+    grid-template-rows: repeat(5, 300px);
+    grid-template-columns: repeat(auto-fit, minmax(100px, 300px   ));
 
 
     justify-content: center;
